--- a/demo/AndroidPushDemo/PushdemoInternal/src/main/res/layout/activity_push.xml
+++ b/demo/AndroidPushDemo/PushdemoInternal/src/main/res/layout/activity_push.xml
@@ -2,7 +2,44 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:orientation="vertical"
                 tools:context=".PushLogActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dip"
+        android:layout_margin="3dip"
+        android:orientation="horizontal">
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:id="@+id/push_group"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="加入群组"
+            android:layout_weight="1"
+            android:id="@+id/join_group"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dip"
+        android:layout_margin="3dip"
+        android:orientation="horizontal">
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:id="@+id/send_message"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="发送"
+            android:layout_weight="1"
+            android:id="@+id/send"/>
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
